--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,14 @@
 .md-button.md-default-theme.md-padding{
   padding: 8px;
 }
+
+.backdrop{
+  width:100%;
+  height:100%;
+}
+.display-image{
+  width:100%;
+}
+md-content.md-default-theme.social-bar{
+  padding:8px;
+}
